force-app/main/default/objects/Template_Category_Eligibility__c/Template_Category_Eligibility__c.object-meta.xml
<CustomObject>
    <description>Junction object linking incentive plan templates to transaction categories, defining which categories are eligible for each plan template.</description>
    <label>Template Category Eligibility</label>
    <nameField>
        <displayFormat>TCE-{00000}</displayFormat>
        <label>Template Category Eligibility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Category Eligibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>