force-app/main/default/objects/Template_Category_Eligibility__c/fields/Transaction_Category__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Category__c</fullName>
    <description>The transaction category eligible for this plan template.</description>
    <label>Transaction Category</label>
    <type>MasterDetail</type>
    <referenceTo>Transaction_Category__c</referenceTo>
    <relationshipLabel>Template Eligibilities</relationshipLabel>
    <relationshipName>Template_Eligibilities_Cat</relationshipName>
</CustomField>